syntax = "proto2";

package syzoj.service.user.rpc;

import "model/common/syzoj.common.proto";

option go_package = "github.com/syzoj/syzoj-ng-go/service/user/rpc";

service User {
	rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
	rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
	rpc VerifyDevice(VerifyDeviceRequest) returns (VerifyDeviceResponse);
}

enum Error {
	DuplicateUserName = 1;
	UserNotFound = 2;
	PasswordIncorrect = 3;
	InvalidToken = 4;

	InvalidUserName = 5;
}

message RegisterUserRequest {
	optional string user_name = 1;
	optional string password = 2;
}

message RegisterUserResponse {
	optional Error error = 1;
	optional string user_id = 2;
}

message LoginUserRequest {
	optional string user_name = 1;
	optional string password = 2;
	optional syzoj.common.DeviceInfo device_info = 3;
}

message LoginUserResponse {
	optional Error error = 1;
	optional string token = 2;
}

message VerifyDeviceRequest {
	optional string token = 1;
}

message VerifyDeviceResponse {
	optional Error error = 1;
	optional string user_id = 2;
	optional syzoj.common.DeviceInfo device_info = 3;
}
